# babushkaml-app

./: .env  .gitignore  .gitignore.bun  Dockerfile  OAUTH_SETUP.md  README.md  capacitor.config.ts  index.html  ios-setup.sh  macos-setup.sh  package-lock.json  package.json  release.sh  tsconfig.tsbuildinfo
.github/workflows/: release.yml
ios/App/: Podfile
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
public/: LOGO_README.md  test-logo.html
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/python/: runner.py
src-tauri/src/: db.rs  lib.rs  main.rs  runner.rs  workspace.rs
src/components/Layout/: Header.tsx  Sidebar.tsx
src/components/settings/: ComputeSettings.tsx
src/components/training/: DockerImageSelector.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ConsoleViewer.tsx  Input.tsx  Logo.tsx  Metric.tsx  Progress.tsx  Toast.tsx  UserMenu.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useLogger.ts  useTheme.ts  useToast.ts  useWebSocket.ts
src/lib/: logger.ts  supabase.ts  tauri.ts  utils.ts
src/pages/: ApiPlayground.tsx  BatchInference.tsx  Compare.tsx  Dashboard.tsx  Datasets.tsx  Experiments.tsx  Features.tsx  Inference.tsx  Login.tsx  Models.tsx  Monitoring.tsx  Pipelines.tsx  Settings.tsx  Training.tsx  Upload.tsx  Workbench.tsx
src/services/: ComputeService.ts  DockerService.ts  SyncService.ts
src/types/: index.ts
