[package]
name = "babushkaml"
version = "0.1.0"
description = "BabushkaML - Local ML Training & Model Management"
authors = ["BabushkaML Team"]
edition = "2021"

[lib]
name = "babushkaml_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-deep-link = "2"
# For local OAuth server
axum = "0.7"
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread"] }
walkdir = "2"
zip = "0.6"
directories = "5"
thiserror = "1"
rand = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
